// Copyright 2020 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.module.v1;

option go_package = "github.com/bufbuild/buf/internal/gen/proto/go/buf/module/v1;modulev1";

// Module is a module.
message Module {
  // files are the files that make up the set.
  //
  // Sorted by path.
  // Path must be unique.
  // Only the target files. No imports.
  //
  // Maximum total size of all content: 32MB.
  repeated ModuleFile files = 1;
  // dependencies are the dependencies.
  //
  // These must be resolved.
  repeated ModuleName dependencies = 2;
}

// ModuleFile is a file within a FileSet.
message ModuleFile {
  // path is the relative path of the file.
  // Path can only use '/' as the separator character, and includes no ".." components.
  string path = 1;
  // content is the content of the file.
  bytes content = 2;
}

message ModuleName {
  // The DNS name or IP address of the server that hosts the module.
  string remote = 1;
  // The users username or organization name
  string owner = 2;
  // The repository name
  string repository = 3;
  // The repository track
  string track = 4;
  // The repository commit digest
  string digest = 5;
}
